# doc-obj-detect

./: .gitignore  AGENTS.md  AUGMENTATION_UPDATES.md  CLAUDE.md  README.md  RESEARCH.md  STARTUP_INSTRUCTIONS.md  main.py  pyproject.toml  pytest.ini  visualize_augmentations.py
agent_docs/: augmentation_pipeline.md  training_commands.md
configs/: distill.yaml  finetune_doclaynet.yaml  pretrain_publaynet.yaml  pretrain_publaynet_square640.yaml  test_eval_speed.yaml  test_quick.yaml
configs/architectures/: dfine_large.yaml  dfine_medium.yaml  dfine_small.yaml  dfine_xlarge.yaml
docs/: RESEARCH.md
scripts/: benchmark_vram.py  debug_multiscale.py  test_batch_size.py
src/doc_obj_detect/: __init__.py  cli.py  config.py  data.py  distill.py  evaluate.py  metrics.py  model.py  train.py  trainer.py  utils.py  visualize.py
src/doc_obj_detect/cli/: __init__.py  finalize.py  main.py
src/doc_obj_detect/config/: __init__.py  loader.py  schemas.py
src/doc_obj_detect/data/: __init__.py  augmentor.py  constants.py  datasets.py  pipeline.py
src/doc_obj_detect/models/: __init__.py  builder.py  info.py
src/doc_obj_detect/tools/: __init__.py  analyze_multiscale.py  bbox_stats.py  cleanup.py
src/doc_obj_detect/training/: __init__.py  base_runner.py  callbacks.py  distill_runner.py  distillation.py  evaluator.py  runner.py  trainer_core.py
src/doc_obj_detect/utils/: __init__.py  logging.py  paths.py
tests/: test_augmentations_comprehensive.py  test_callbacks.py  test_cli.py  test_config.py  test_data.py  test_distill_runner.py  test_evaluate.py  test_metrics.py  test_model.py  test_model_loading.py  test_train.py  test_trainer_core.py  test_training_runner.py
